fix(JumpButton): Fix JumpButton styles for Backstage
Because of the way Backstage pulls in CSS (PF before ChatBot), PatternFly overrides certain styles for the JumpButtons. Marking them should allow these to render properly in Backstage.

--- a/packages/module/src/MessageBox/JumpButton.scss
+++ b/packages/module/src/MessageBox/JumpButton.scss
@@ -7,12 +7,12 @@
   inset-inline-start: 75% !important;
   width: 2rem !important;
   height: 2rem !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
   padding: var(--pf-t--global--spacer--md) !important;
   border-radius: var(--pf-t--global--border--radius--pill) !important;
-  --pf-v6-c-button--MinWidth: 2rem;
+  --pf-v6-c-button--MinWidth: 2rem !important;
   background-color: var(--pf-t--global--background--color--primary--default) !important;
   border: 1px solid var(--pf-t--chatbot--border) !important;
   box-shadow: var(--pf-t--global--box-shadow--sm);
